--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <h1>Flickr search <small> a tool to search for Flickr images</small></h1>
     <h5><small>Author : M.PARAISO</small></h5>
     <div>
-    <small class="muted">Instructions : Enter a 4 or more letter keyword and your flickr API to search photos and pictures about a subject<br/>
-      To get a Flickr api key , create an account on 
+    <small class="muted">Instructions : Enter a 4 or more letter keyword to start a search.
       <a href='http://www.flickr.com' target='_blank'>Flickr</a> and get your key here: 
       <a href='http://www.flickr.com/services/apps/create/noncommercial/' target='_blank'>http://www.flickr.com/services/apps/create/noncommercial/</a> 
     </small>
