--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="application">
 <head lang="en">
   <meta charset="utf-8">
-  <title>Custom Plunker</title>
+  <title>Flickr Search</title>
   <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
   <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js'></script>
   <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.0.3/angular.min.js'></script>
