--- a/index.html
+++ b/index.html
@@ -3,63 +3,53 @@
 <head lang="en">
   <meta charset="utf-8">
   <title>Flickr Search</title>
-  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
-  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js'></script>
-  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.0.3/angular.min.js'></script>
-  <link rel='stylesheet' href='http://twitter.github.com/bootstrap/assets/css/bootstrap.css'>
-  <style>
-    body{
-      font-family: Helvetica,Tahoma,Verdana,sans-serif,sans;
-      font-size:100%;
-    }
-    body.dark{
-      color:#F9F9F9;
-      background:#222;
-    }
-    img{
-      background:#222;
-      width:150px;
-      height:150px;
-    }
-  </style>
+  <script type='text/javascript' 
+    src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
+  <script type='text/javascript' 
+    src='https://cdnjs.cloudflare.com/ajax/libs/jquery.transit/0.9.9/jquery.transit.min.js'></script>
+  <script type='text/javascript' 
+    src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.0.3/angular.min.js'></script>
+  <script type="text/javascript" 
+    src='https:///cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.2.2/bootstrap.min.js'></script>
+  <link rel='stylesheet' 
+    href='http://twitter.github.com/bootstrap/assets/css/bootstrap.css'>
+  <link rel="stylesheet" href="css/style.css">
   
 </head>
 <body class='{{bodyClass}}'  ng-controller='FlickSearchController'>
-  <div class='container'>
-  <div class='row-fluid' ng-show='menuVisible=="hide menu"'>
-    <h1>Flickr search <small> a tool to search for Flickr images</small></h1>
-    <h5><small>Author : M.PARAISO</small></h5>
-    <div>
-    <small class="muted">Instructions : Enter a 4 or more letter keyword to start a search.
-      <a href='http://www.flickr.com' target='_blank'>Flickr</a> and get your key here: 
-      <a href='http://www.flickr.com/services/apps/create/noncommercial/' target='_blank'>http://www.flickr.com/services/apps/create/noncommercial/</a> 
-    </small>
-    </div>
-    <table class='table'>
+  <div class='container-fluid'>
+    <div class='row-fluid' ng-show='menuVisible=="hide menu"'>
+      <h1>Flickr search <small> a tool to search for Flickr images</small></h1>
+      <h5><small>Author : M.PARAISO, Contact mparaiso@online.fr</small></h5>
+      <div>
+        <small class="muted">Instructions : Enter a 4 or more letter keyword to start a search. 
+        </small>
+      </div>
+      <table class='table'>
         <tbody>
-        <tr  >
-          <td>
-            theme :
-          </td>
-          <td>
-          <select ng-model='bodyClass'>
-              <option value='light'>Light</option>
-              <option value='dark'>Dark</option>
-            </select>
-          </td>
-        </tr>
+          <tr  >
+            <td>
+              UI theme :
+            </td>
+            <td>
+              <select ng-model='bodyClass'>
+                <option value='light'>Light</option>
+                <option value='dark'>Dark</option>
+              </select>
+            </td>
+          </tr>
           <tr>
             <td>
               <label for='search'>Search :</label>
             </td>
             <td>
-                <input required="true" ng-change='search(keyword)' 
-                placeholder='Enter a search text' type='text' name='search' ng-model='keyword'/>
-                <i ng-click='keyword=null' ng-show='keyword' class='icon-remove'></i>
-                <!--<br/><strong>{{keyword}}</strong>-->
+              <input required="true" ng-change='search(keyword)' 
+              placeholder='Enter a search text' type='text' name='search' ng-model='keyword'/>
+              <i ng-click='keyword=null' ng-show='keyword' class='icon-remove'></i>
+              <!--<br/><strong>{{keyword}}</strong>-->
             </td>
-            </tr>
-            <!--
+          </tr>
+            <!-- donne la possibilité d'entrer sa prope key
             <tr>
             <td><label for='api-key'>
               Flickr API key : </label></td>
@@ -69,8 +59,8 @@
 
               </td>
             </tr> 
-            -->
-            <tr>
+          -->
+          <tr>
             <td><label for='max-results-per-page'>
               Max results per page : </label></td>
               <td>
@@ -79,10 +69,11 @@
                 <!--<br/><strong>{{apiKey}}</strong>-->
               </td>
             </tr>
-            </tbody>
-      </table>
+          </tbody>
+        </table>
       </div>
       <div class='row-fluid'><a class='btn btn-mini' ng-click='showMenu(menuVisible)'>{{menuVisible}}</a>
+        <a class='btn btn-mini pull-right' ng-click='showHistory(historyVisible)'>{{historyVisible}}</a>
         <hr/>
       </div>
       <div class='row-fluid'></div>
@@ -93,107 +84,28 @@
         </h3>
         <div ng-show="serverMessage" class='alert alert-warn'>{{serverMessage}}</div>
         <ul class='thumbnails'>
-          <li class='thumbnail' ng-repeat='image in images'><img  data-image-hover title='{{image.title}}' data-image-loader ng-src='{{image.src}}' src='http://placehold.it/150x150'></li>
+          <li class='thumbnail' ng-repeat='image in images'><a ng-click='setSelectedImage($index)' app-modal='#modal'><img  data-image-hover title='{{image.title}}' data-image-loader ng-src='{{image.src}}' src='http://placehold.it/150x150'></a></li>
         </ul>
-        </div>
       </div>
     </div>
-  </body>
-  <script type='text/javascript'>
-  // APPLICATION
-  var app = angular.module("application",[]);
-  // IMAGE LOADER DIRECTIVE
-  app.directive("imageLoader",function(){
-    return function(scope,element,attrs){
-      element.css({"scale":0,"opacity":0});
-      element.on("load",function(event){
-        $.cssEase['bounce'] = 'cubic-bezier(0,1,0.5,1.3)';
-        element.transition({scale:1,opacity:0.8},750,"bounce");
-      });
-    }
-  });
-  // IMAGE HOVER DIRECTIVE
-  app.directive("imageHover",function(){
-    return function(scope,element,attrs){
-      element.on("mouseover",function(){
-        element.transition({scale:1.2,opacity:1},200,"in");
-      });
-      element.on("mouseout",function(){
-        element.transition({scale:1,opacity:0.8},200,"out");
-      });
-    };
-  });
-  // FlickSearchController
-  var FlickSearchController=function($scope,$http){
-    $scope.rpp = 20;
-    $scope.menuVisible = "hide menu";
-    $scope.showMenu = function(v){
-      if(v=="show menu"){
-        v="hide menu";
-      }else{
-        v="show menu";
-      }
-      $scope.menuVisible = v;
-      console.log($scope.menuVisible );
-    }
-    $scope.bodyClass = "light";
-    $http({cache:true});
-    // $scope.apiKey = window.localStorage.getItem("apiKey") || null;
-    $scope.apiKey = window.localStorage.getItem("apiKey") || "a47e50dcce48c46c58f9b8c622c42a18";
-    $scope.keyword= null;
-    $scope.setToLocalStorage = function(key,value){
-        // set apikey to localstorage doesnt seem to work though
-        console.log(arguments);
-        window.localStorage.setItem(key,value);
-      }
-      var makePhotoURL =function(farmId,serverId,id,secret,format){
-        
-        // make image url from flickR object
-        return "http://farm"+farmId+".staticflickr.com/"+serverId+"/"+id+"_"+secret+"_"+format+".jpg";
-      };
-      var makeApiString = function(keyword,apiKey,resultsPerPage){
-        // get the request url
-        resultsPerPage = resultsPerPage || 20;
-        var str =  "http://api.flickr.com/services/rest/?"+
-          "method=flickr.photos.search"+
-          "&is_getty=true"+
-          "&tags="+keyword+
-          "&api_key="+apiKey+
-          "&text="+keyword+
-          "&format=json&per_page="+resultsPerPage+
-          "&jsoncallback=JSON_CALLBACK";
-        return str;
-      }
-      var doSearch = function(keyword,apiKey,rpp){
-        $http.jsonp(makeApiString(keyword,$scope.apiKey,rpp)).success(function(data){
-          if(data["stat"]!='ok'){
-            // request failure
-            $scope.serverMessage = data["message"]
-            $scope.images = [];
-            return;
-          }else{
-            $scope.serverMessage=null;
-          }
-          $scope.images = data.photos.photo.map(function(photo){
-           return {title:photo['title'],src:makePhotoURL(photo['farm'],photo['server'],photo['id'],photo['secret'],'q')};
-         });
-        });
-      };
-      $scope.search = function(keyword){
-        
-        if($scope.apiKey===null ||keyword===null || (typeof(keyword)!="undefined" && keyword.length<4) ){
-          return;
-        }
-        if($scope.rpp<=0){
-          $scope.rpp = 10;
-        }
-        if( $scope.timedout ){
-          clearTimeout($scope.timeout);
-        };
-          $scope.timedout = setTimeout(function(){
-            doSearch(keyword,$scope.apiKey,$scope.rpp);
-          },1000);
-        };
-    };
-    </script>
-    </html>
+  </div>
+  <div class="row-fluid">
+    <!-- Modal -->
+    <div id="modal"  class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h5 id="myModalLabel">{{selectedImage.title}}</h5>
+      </div>
+      <div class="modal-body" app-transitional>
+        <img data-image-loader-face  src="{{selectedImage.bigSrc}}" alt="{{selectedImage.title}}">
+      </div>
+      <div class="modal-footer">
+        <a ng-click='getPreviousImage()' class='pull-left' href="#">previous</a> <a ng-click='getNextImage()'>next</a>
+        <!-- <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</body>
+<script type='text/javascript' src='js/app.js'></script>
+</html>
