--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h5 id="myModalLabel">{{selectedImage.title}}</h5>
       </div>
       <div class="modal-body" app-transitional>
-        <img data-image-loader-face  src="{{selectedImage.bigSrc}}" alt="{{selectedImage.title}}">
+        <img data-image-loader-fade  src="{{selectedImage.bigSrc}}" alt="{{selectedImage.title}}">
       </div>
       <div class="modal-footer">
         <a ng-click='getPreviousImage()' class='pull-left' href="#">previous</a> <a ng-click='getNextImage()'>next</a>
