--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta charset="utf-8">
   <title>Flickr Search</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type='text/javascript' 
     src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
   <script type='text/javascript' 
@@ -17,7 +18,7 @@
   
 </head>
 <body class='{{bodyClass}}'  ng-controller='FlickSearchController'>
-  <div class='container-fluid'>
+  <div class='container'>
     <div class='row-fluid' ng-show='menuVisible=="hide menu"'>
       <h1>Flickr search <small> a tool to search for Flickr images</small></h1>
       <h5><small>Author : M.PARAISO, Contact mparaiso@online.fr</small></h5>
@@ -105,7 +106,10 @@
         <button class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
+    <div class="row-fluid footer">
+      &copy; M.Paraiso , contact : mparaiso@online.fr , fork the source on <a href="https://github.com/Mparaiso/flickr-search">github</a>
+    </div>
   </div>
-</body>
 <script type='text/javascript' src='js/app.js'></script>
+</body>
 </html>
