favicon.ico added

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <li class='thumbnail' ng-repeat='image in images'><a ng-click='setSelectedImage($index)' app-modal='#modal'><img  data-image-hover title='{{image.title}}' data-image-loader ng-src='{{image.src}}' src='http://placehold.it/150x150'></a></li>
         </ul>
       </div>
-      <div class="row-fluid footer">
-        &copy; M.Paraiso , contact : mparaiso@online.fr , fork the source on <a href="https://github.com/Mparaiso/flickr-search">github</a>
+      <div class="row-fluid footer minimal">
+        <small>&copy; M.Paraiso , contact : mparaiso@online.fr , fork the source on <a href="https://github.com/Mparaiso/flickr-search">github</a></small>
       </div>
     </div>
   </div>
