--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
 </head>
 <body class='{{bodyClass}}'  ng-controller='FlickSearchController'>
-  <div class='container'>
+  <div class='container-fluid container'>
     <div class='row-fluid' ng-show='menuVisible=="hide menu"'>
       <h1>Flickr search <small> a tool to search for Flickr images</small></h1>
       <h5><small>Author : M.PARAISO, Contact mparaiso@online.fr</small></h5>
