--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class='{{bodyClass}}'  ng-controller='FlickSearchController'>
   <div class='container-fluid container'>
     <div class='row-fluid' ng-show='menuVisible=="hide menu"'>
-      <h1>Flickr search <small> a tool to search for Flickr images</small></h1>
+      <h1>Flickr search <small> an AngularJS app to search images on Flickr</small></h1>
       <h5><small>Author : M.PARAISO, Contact mparaiso@online.fr</small></h5>
       <div>
         <small class="muted">Instructions : Enter a 4 or more letter keyword to start a search. 
